// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`рендеринг активных клиентов 1`] = `
<div
  className="MobileCompany"
>
  <div
    className="MobileCompanyName"
  >
    Компания «
    Velcom
    »
  </div>
  <div>
    <button
      onClick={[Function]}
      value="all"
    >
      Все
    </button>
    <button
      onClick={[Function]}
      value="active"
    >
      Активные
    </button>
    <button
      onClick={[Function]}
      value="blocked"
    >
      Заблокированные
    </button>
  </div>
  <div
    className="MobileCompanyClients"
  >
    <table>
      <tbody>
        <tr>
          <th>
            Фамилия
          </th>
          <th>
            Имя
          </th>
          <th>
            Отчество
          </th>
          <th>
            Баланс
          </th>
          <th>
            Статус
          </th>
          <th>
            Редактировать
          </th>
          <th>
            Удалить
          </th>
        </tr>
        <tr
          className="MobileClient"
        >
          <td>
            Иванов
          </td>
          <td>
            Иван
          </td>
          <td>
            Иванович
          </td>
          <td>
            200
          </td>
          <td
            className="MobileClientActive"
          >
            Активный
          </td>
          <td>
            <button
              onClick={[Function]}
              value="Редактировать"
            >
              Редактировать
            </button>
          </td>
          <td>
            <button
              onClick={[Function]}
              value="Удалить"
            >
              Удалить
            </button>
          </td>
        </tr>
        <tr
          className="MobileClient"
        >
          <td>
            Сидоров
          </td>
          <td>
            Сидор
          </td>
          <td>
            Сидорович
          </td>
          <td>
            250
          </td>
          <td
            className="MobileClientActive"
          >
            Активный
          </td>
          <td>
            <button
              onClick={[Function]}
              value="Редактировать"
            >
              Редактировать
            </button>
          </td>
          <td>
            <button
              onClick={[Function]}
              value="Удалить"
            >
              Удалить
            </button>
          </td>
        </tr>
        <tr
          className="MobileClient"
        >
          <td>
            Петров
          </td>
          <td>
            Пётр
          </td>
          <td>
            Петрович
          </td>
          <td>
            180
          </td>
          <td
            className="MobileClientActive"
          >
            Активный
          </td>
          <td>
            <button
              onClick={[Function]}
              value="Редактировать"
            >
              Редактировать
            </button>
          </td>
          <td>
            <button
              onClick={[Function]}
              value="Удалить"
            >
              Удалить
            </button>
          </td>
        </tr>
        <tr
          className="MobileClient"
        >
          <td>
            Григорьев
          </td>
          <td>
            Григорий
          </td>
          <td>
            Григорьевич
          </td>
          <td>
            -220
          </td>
          <td
            className="MobileClientBlocked"
          >
            Заблокирован
          </td>
          <td>
            <button
              onClick={[Function]}
              value="Редактировать"
            >
              Редактировать
            </button>
          </td>
          <td>
            <button
              onClick={[Function]}
              value="Удалить"
            >
              Удалить
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <input
    onClick={[Function]}
    type="button"
    value="Добавить клиента"
  />
</div>
`;

exports[`рендеринг активных клиентов 2`] = `
<div
  className="MobileCompany"
>
  <div
    className="MobileCompanyName"
  >
    Компания «
    Velcom
    »
  </div>
  <div>
    <button
      onClick={[Function]}
      value="all"
    >
      Все
    </button>
    <button
      onClick={[Function]}
      value="active"
    >
      Активные
    </button>
    <button
      onClick={[Function]}
      value="blocked"
    >
      Заблокированные
    </button>
  </div>
  <div
    className="MobileCompanyClients"
  >
    <table>
      <tbody>
        <tr>
          <th>
            Фамилия
          </th>
          <th>
            Имя
          </th>
          <th>
            Отчество
          </th>
          <th>
            Баланс
          </th>
          <th>
            Статус
          </th>
          <th>
            Редактировать
          </th>
          <th>
            Удалить
          </th>
        </tr>
        <tr
          className="MobileClient"
        >
          <td>
            Иванов
          </td>
          <td>
            Иван
          </td>
          <td>
            Иванович
          </td>
          <td>
            200
          </td>
          <td
            className="MobileClientActive"
          >
            Активный
          </td>
          <td>
            <button
              onClick={[Function]}
              value="Редактировать"
            >
              Редактировать
            </button>
          </td>
          <td>
            <button
              onClick={[Function]}
              value="Удалить"
            >
              Удалить
            </button>
          </td>
        </tr>
        <tr
          className="MobileClient"
        >
          <td>
            Сидоров
          </td>
          <td>
            Сидор
          </td>
          <td>
            Сидорович
          </td>
          <td>
            250
          </td>
          <td
            className="MobileClientActive"
          >
            Активный
          </td>
          <td>
            <button
              onClick={[Function]}
              value="Редактировать"
            >
              Редактировать
            </button>
          </td>
          <td>
            <button
              onClick={[Function]}
              value="Удалить"
            >
              Удалить
            </button>
          </td>
        </tr>
        <tr
          className="MobileClient"
        >
          <td>
            Петров
          </td>
          <td>
            Пётр
          </td>
          <td>
            Петрович
          </td>
          <td>
            180
          </td>
          <td
            className="MobileClientActive"
          >
            Активный
          </td>
          <td>
            <button
              onClick={[Function]}
              value="Редактировать"
            >
              Редактировать
            </button>
          </td>
          <td>
            <button
              onClick={[Function]}
              value="Удалить"
            >
              Удалить
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <input
    onClick={[Function]}
    type="button"
    value="Добавить клиента"
  />
</div>
`;

exports[`рендеринг заблокированных клиентов 1`] = `
<div
  className="MobileCompany"
>
  <div
    className="MobileCompanyName"
  >
    Компания «
    Velcom
    »
  </div>
  <div>
    <button
      onClick={[Function]}
      value="all"
    >
      Все
    </button>
    <button
      onClick={[Function]}
      value="active"
    >
      Активные
    </button>
    <button
      onClick={[Function]}
      value="blocked"
    >
      Заблокированные
    </button>
  </div>
  <div
    className="MobileCompanyClients"
  >
    <table>
      <tbody>
        <tr>
          <th>
            Фамилия
          </th>
          <th>
            Имя
          </th>
          <th>
            Отчество
          </th>
          <th>
            Баланс
          </th>
          <th>
            Статус
          </th>
          <th>
            Редактировать
          </th>
          <th>
            Удалить
          </th>
        </tr>
        <tr
          className="MobileClient"
        >
          <td>
            Иванов
          </td>
          <td>
            Иван
          </td>
          <td>
            Иванович
          </td>
          <td>
            200
          </td>
          <td
            className="MobileClientActive"
          >
            Активный
          </td>
          <td>
            <button
              onClick={[Function]}
              value="Редактировать"
            >
              Редактировать
            </button>
          </td>
          <td>
            <button
              onClick={[Function]}
              value="Удалить"
            >
              Удалить
            </button>
          </td>
        </tr>
        <tr
          className="MobileClient"
        >
          <td>
            Сидоров
          </td>
          <td>
            Сидор
          </td>
          <td>
            Сидорович
          </td>
          <td>
            250
          </td>
          <td
            className="MobileClientActive"
          >
            Активный
          </td>
          <td>
            <button
              onClick={[Function]}
              value="Редактировать"
            >
              Редактировать
            </button>
          </td>
          <td>
            <button
              onClick={[Function]}
              value="Удалить"
            >
              Удалить
            </button>
          </td>
        </tr>
        <tr
          className="MobileClient"
        >
          <td>
            Петров
          </td>
          <td>
            Пётр
          </td>
          <td>
            Петрович
          </td>
          <td>
            180
          </td>
          <td
            className="MobileClientActive"
          >
            Активный
          </td>
          <td>
            <button
              onClick={[Function]}
              value="Редактировать"
            >
              Редактировать
            </button>
          </td>
          <td>
            <button
              onClick={[Function]}
              value="Удалить"
            >
              Удалить
            </button>
          </td>
        </tr>
        <tr
          className="MobileClient"
        >
          <td>
            Григорьев
          </td>
          <td>
            Григорий
          </td>
          <td>
            Григорьевич
          </td>
          <td>
            -220
          </td>
          <td
            className="MobileClientBlocked"
          >
            Заблокирован
          </td>
          <td>
            <button
              onClick={[Function]}
              value="Редактировать"
            >
              Редактировать
            </button>
          </td>
          <td>
            <button
              onClick={[Function]}
              value="Удалить"
            >
              Удалить
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <input
    onClick={[Function]}
    type="button"
    value="Добавить клиента"
  />
</div>
`;

exports[`рендеринг заблокированных клиентов 2`] = `
<div
  className="MobileCompany"
>
  <div
    className="MobileCompanyName"
  >
    Компания «
    Velcom
    »
  </div>
  <div>
    <button
      onClick={[Function]}
      value="all"
    >
      Все
    </button>
    <button
      onClick={[Function]}
      value="active"
    >
      Активные
    </button>
    <button
      onClick={[Function]}
      value="blocked"
    >
      Заблокированные
    </button>
  </div>
  <div
    className="MobileCompanyClients"
  >
    <table>
      <tbody>
        <tr>
          <th>
            Фамилия
          </th>
          <th>
            Имя
          </th>
          <th>
            Отчество
          </th>
          <th>
            Баланс
          </th>
          <th>
            Статус
          </th>
          <th>
            Редактировать
          </th>
          <th>
            Удалить
          </th>
        </tr>
        <tr
          className="MobileClient"
        >
          <td>
            Григорьев
          </td>
          <td>
            Григорий
          </td>
          <td>
            Григорьевич
          </td>
          <td>
            -220
          </td>
          <td
            className="MobileClientBlocked"
          >
            Заблокирован
          </td>
          <td>
            <button
              onClick={[Function]}
              value="Редактировать"
            >
              Редактировать
            </button>
          </td>
          <td>
            <button
              onClick={[Function]}
              value="Удалить"
            >
              Удалить
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <input
    onClick={[Function]}
    type="button"
    value="Добавить клиента"
  />
</div>
`;
